--- a/wercker-box.yml
+++ b/wercker-box.yml
@@ -1,6 +1,6 @@
 name: fluentd
 version: 0.0.1
-inherits: wercker/ubuntu12.04-ruby2.0.0
+inherits: wercker/ubuntu12.04-ruby2.0.0@0.1.5
 type: service
 platform: ubuntu@12.04
 description: box with fluentd an open source log management tool
